--- a/css/theme_body.css
+++ b/css/theme_body.css
@@ -274,3 +274,33 @@ q::before {
 .bypostauthor {
 	display: block;
 }
+
+/* Alerts */
+
+.alert-danger::before {
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    content: "\f071";
+    margin-right: .25rem;
+}
+
+.alert-warning::before {
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    content: "\f06a";
+    margin-right: .25rem;
+}
+
+.alert-info::before {
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    content: "\f05a";
+    margin-right: .25rem;
+}
+
+.alert-success::before {
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    content: "\f058";
+    margin-right: .25rem;
+}
