--- a/woocommerce/css/woocommerce_colors.css
+++ b/woocommerce/css/woocommerce_colors.css
@@ -1,3 +1,12 @@
+
+@media (max-width: 992px) {
+    #nav-main .btn.focus, #nav-main .btn:focus {
+        outline: none !important;
+        box-shadow: none !important;
+    }
+}
+
+
 .card del .woocommerce-Price-amount.amount {
     color: var(--danger) !important
 }
