--- a/woocommerce/css/theme_header_woocommerce.css
+++ b/woocommerce/css/theme_header_woocommerce.css
@@ -149,14 +149,14 @@
 	bottom: 0;
 	opacity: 0;
 	visibility: hidden;
-	transition: all .4s ease-in-out
+	transition: all .4s ease-in-out;
 }
 
 .opac.visible {
 	opacity: 1;
 	visibility: visible;
 	cursor: pointer;
-	transition: all .4s ease-in-out
+	transition: all .4s ease-in-out;
 }
 
 .cart-loader {
